Fixed sidebar height cropping last hovered button

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -78,7 +78,7 @@
         text-align: center;
 
         &--open {
-            max-height: 114px;
+            max-height: 116px;
         }
     }
 
